remove search items

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ width: 100%;
     <P><center>
     <input type="submit" value="百度" id="baidu" button type="button" class="btn btn-primary" />
     <input type="submit" value="谷歌" id="google" button type="button" class="btn btn-primary"/>
-    <input type="submit" value="谷歌镜像" id="google1" button type="button" class="btn btn-primary"/>
+    <!--<input type="submit" value="谷歌镜像" id="google1" button type="button" class="btn btn-primary"/>-->
     <input type="submit" value="京东" id="jd" button type="button" class="btn btn-primary" />
     <input type="submit" value="淘宝" id="taobao" button type="button" class="btn btn-primary" />
    <input type="submit" value="微信" id="weixin" button type="button" class="btn btn-primary" />
@@ -153,7 +153,7 @@ width: 100%;
     <input type="submit" value="豆瓣" id="douban" button type="button" class="btn btn-primary"/>
     <input type="submit" value="音乐" id="gequ" button type="button" class="btn btn-primary"/>
     <input type="submit" value="网盘" id="panci" button type="button" class="btn btn-primary"/>
-        <input type="submit" value="Byr 论坛" id="weixin3" button type="button" class="btn btn-primary"/>
+        <!--<input type="submit" value="Byr 论坛" id="weixin3" button type="button" class="btn btn-primary"/>-->
     <input type="submit" value="地图" id="ditu" button type="button" class="btn btn-primary"/>
  
   </center></P>
