--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ background-image:url(http://yun.zhangxingqiu.cn/images/byrbg.jpg);
 	时间：2016-10-05
 	描述：这是本地测试的背景照路径*/
 	
-  background-image:url(images/background.jpg);
+ /* background-image:url(images/background.jpg); */
 
 z-index: -1;
 background-repeat:no-repeat;
@@ -125,9 +125,9 @@ width: 100%;
   <div class="hidden-xs"> 
     <div class="row LOGO">
       <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-xs-6 col-xs-offset-3">
-        <a href="./index.html"><img id="LOGO" src="http://yun.zhangxingqiu.cn/images/logo.svg"  alt="Responsive image"></a>
+        <!--<a href="./index.html"><img id="LOGO" src="http://yun.zhangxingqiu.cn/images/logo.svg"  alt="Responsive image"></a>-->
         
-        <!--<a href="./index.html"><img id="LOGO" src="images/logo3.png"  alt="Responsive image"></a>-->
+        <a href="./index.html"><img id="LOGO" src="images/zen.png"  alt="Responsive image"></a>
         
       </div>
     </div>
