change site name

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
 
 
-  <title>Byr.wiki·北邮人导航</title>
+  <title>Cyycle</title>
 
 <link rel="shortcut icon" href="./favicon.ico">
 
-<meta name="Keywords" content="北京邮电大学,导航,北邮人,Byr,Byr.wiki"/>
-<meta name="Description" content="北邮人常用的导航页，随时随地 Byr.wiki。一个框，全能搜！如打开缓慢，请访问简洁版 http://so.byr.wiki/"/>
+<meta name="Keywords" content="Capt,导航,Cyycle,"/>
+<meta name="Description" content="个人常用的导航页，随时随地 Cyycle。一个框，全能搜！如打开缓慢，请访问简洁版 http://so.byr.wiki/"/>
 
 
 <!--
-	作者：i@zhangxingqiu.cn
+	作者：auspbro@gmail.com
 	时间：2016-12-15
 	描述：为了提升访问速度，改为访问放在阿里云服务器里的样式文件，实际上源代码和本地一样。如果想要更换为本地的路径，可使用搜索替换功能，把 http://byr.zhangxingqiu.cn/ 替换为 ./ 即可。
 
@@ -46,7 +46,7 @@ body  {
 background-image:url(http://yun.zhangxingqiu.cn/images/byrbg.jpg);	
 */	
 	
-	/*作者：i@zhangxingqiu.cn
+	/*作者：auspbro@gmail.com
 	时间：2016-10-05
 	描述：这是本地测试的背景照路径*/
 	
@@ -60,10 +60,6 @@ height: 100%;
 width: 100%;
 }
 
-.smaller-image {
-    height: 50%;
-    width: 50%;
-}
 </style>
 
 </head>
@@ -74,7 +70,7 @@ width: 100%;
   
 
 <!--
-	作者：i@zhangxingqiu.cn
+	作者：auspbro@gmail.com
 	时间：2016-10-04
 	描述：原来的蓝色背景顶部导航
 -->
@@ -85,7 +81,7 @@ width: 100%;
   
    <!-- <a href="http://byr.wiki" id="zb" style="font-size: 19px;">北邮人导航</a>-->
    <!-- <a class="LOGO1" href="http://byr.wiki"><img id="zb" src="http://yun.zhangxingqiu.cn/images/logo7.png"  alt="北邮人导航"></a> -->
-    <a href="https://auspbro.github.io/maneuver/" target="_blank" class="zb"  >ZenNavi</a>
+    <a href="https://auspbro.github.io/maneuver/" target="_blank" class="zb"  >Cyycle</a>
   
     <a href="http://byr.wiki/liuyan.html" target="_blank" class="yb "  >...</a>
     <!--<a href="http://byr123.irockbunny.com/" target="_blank" class="yb">新版导航</a>-->
@@ -97,14 +93,14 @@ width: 100%;
 
 
 <!--
-	作者：i@zhangxingqiu.cn
+	作者：auspbro@gmail.com
 	时间：2016-10-04
 	描述：主体部分内容
 -->
 
 <div class="container">
   <!--
-  	作者：i@zhangxingqiu.cn
+  	作者：auspbro@gmail.com
   	时间：2016-10-20
   	描述：仅在屏幕尺寸小于 768px 可见
   -->
@@ -122,7 +118,7 @@ width: 100%;
   
    
   <!--
-  	作者：i@zhangxingqiu.cn
+  	作者：auspbro@gmail.com
   	时间：2016-10-20
   	描述：仅在屏幕尺寸大于 768px 可见
   -->
@@ -139,7 +135,7 @@ width: 100%;
   </div>
   
   <div class="input-group input-group-lg">
- 	   <span class="input-group-addon">Zen</span> 
+ 	   <span class="input-group-addon">Cyycle</span> 
     <form action="http://www.baidu.com/s" method="get" target="_blank">
        <input type="text" class="form-control" name="search" id="search" placeholder="输入关键词，再点击下方相应按钮，即可检索。 " baiduSug="2"  value=" " >
    
@@ -169,7 +165,7 @@ width: 100%;
 
   
   <!--
-	作者：i@zhangxingqiu.cn
+	作者：auspbro@gmail.com
 	时间：2016-10-04
 	描述：搜索框完
 -->
@@ -346,14 +342,14 @@ width: 100%;
 		
 	
 				
-<!--作者：i@zhangxingqiu.cn
+<!--作者：auspbro@gmail.com
            时间：2016-10-07
            描述：这里是根据设备尺寸选择自动隐藏的内容
                         -->
 <div class="hidden-xs"> 
      
 		<!--
-    	作者：i@zhangxingqiu.cn
+    	作者：auspbro@gmail.com
     	时间：2016-10-05
     	描述：北邮校园导航相关网址
     -->	
@@ -452,7 +448,7 @@ width: 100%;
 
 </div>
 
-  <!--作者：i@zhangxingqiu.cn
+  <!--作者：auspbro@gmail.com
         时间：2016-10-03
         描述：当前时间显示代码-->
 
@@ -492,7 +488,7 @@ width: 100%;
 </body>
 
 <!--
-	作者：i@zhangxingqiu.cn
+	作者：auspbro@gmail.com
 	时间：2016-10-20
 	描述：搜索完整代码
 -->
