--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ width: 100%;
   </div>
 
   <div class="input-group input-group-lg">
- 	   <span class="input-group-addon">Cyycle</span>
+ 	   <!--<span class="input-group-addon">Cyycle</span>-->
     <form action="http://www.baidu.com/s" method="get" target="_blank">
        <input type="text" class="form-control" name="search" id="search" placeholder="输入关键词，再点击下方相应按钮，即可检索。 " baiduSug="2"  value=" " >
 
@@ -193,11 +193,11 @@ width: 100%;
   		<br>
   		<br>
 
-
+<!--
   		  <center>
     <p id="zhongjian">输入关键词，再点击下方相应按钮，即可检索！随时随地  Byr.wiki！</p>
         </center>
-
+-->
 
          <!--<center>
     <p id="zhongjian"> 为了提供更好的服务，希望您可以参与关于本导航网站的 	<a class="btn btn-danger btn-md" href="http://byr-wiki.mikecrm.com/rfKWumS" role="button"  target="_blank">问卷调查</a></p>
