update first page content

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ width: 100%;
 
   <div class="jumbotron">
 
-    <p id="zhongjian">输入关键词，再点击下方相应按钮，即可检索，默认为百度搜索！<br>随时随地  Byr.Wiki  记住一个就够了！<br>推荐使用电脑访问，效果更好！<br></p>
+    <p id="zhongjian">输入关键词，再点击下方相应按钮，即可检索，默认为百度搜索！<br>Less is more！<br>推荐使用电脑访问，效果更好！<br></p>
     <p align="center"><a class="btn btn-success btn-md" href="http://byr.wiki/liuyan.html" role="button">留言&建议</a></p>
     </div>
 
@@ -186,6 +186,15 @@ width: 100%;
 
     <br>
   	<br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
 
   		<div class="hidden-xs">
