change site name

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
 
 
-  <title>Cyycle</title>
+  <title>Ciicle</title>
 
 <link rel="shortcut icon" href="./favicon.ico">
 
-<meta name="Keywords" content="Capt,导航,Cyycle,"/>
-<meta name="Description" content="个人常用的导航页，随时随地 Cyycle。一个框，全能搜！如打开缓慢，请访问简洁版 http://so.byr.wiki/"/>
+<meta name="Keywords" content="Capt,导航,Ciicle,"/>
+<meta name="Description" content="个人常用的导航页，随时随地 Ciicle。一个框，全能搜！如打开缓慢，请访问简洁版 http://so.byr.wiki/"/>
 
 
 <!--
@@ -81,7 +81,7 @@ width: 100%;
 
    <!-- <a href="http://byr.wiki" id="zb" style="font-size: 19px;">北邮人导航</a>-->
    <!-- <a class="LOGO1" href="http://byr.wiki"><img id="zb" src="http://yun.zhangxingqiu.cn/images/logo7.png"  alt="北邮人导航"></a> -->
-    <a href="https://auspbro.github.io/maneuver/" target="_blank" class="zb"  >Cyycle</a>
+    <a href="https://auspbro.github.io/maneuver/" target="_blank" class="zb"  >Ciicle</a>
 
     <a href="http://byr.wiki/liuyan.html" target="_blank" class="yb "  >...</a>
     <!--<a href="http://byr123.irockbunny.com/" target="_blank" class="yb">新版导航</a>-->
@@ -128,14 +128,14 @@ width: 100%;
       <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-xs-6 col-xs-offset-3">
         <!--<a href="./index.html"><img id="LOGO" src="http://yun.zhangxingqiu.cn/images/logo.svg"  alt="Responsive image"></a>-->
 
-        <a href="./index.html"><img id="LOGO" src="images/zen.png" width="50" height="50"  alt="Responsive image"></a>
+        <a href="./index.html"><img id="LOGO" src="images/zen.png" width="30" height="30"  alt="Responsive image"></a>
 
       </div>
     </div>
   </div>
 
   <div class="input-group input-group-lg">
- 	   <!--<span class="input-group-addon">Cyycle</span>-->
+ 	   <!--<span class="input-group-addon">Ciicle</span>-->
     <form action="http://www.baidu.com/s" method="get" target="_blank">
        <input type="text" class="form-control" name="search" id="search" placeholder="输入关键词，再点击下方相应按钮，即可检索。 " baiduSug="2"  value=" " >
 
@@ -380,49 +380,21 @@ width: 100%;
 
 			</tr>
 
-			<!--暂时下线北邮相关站点-->
-
-			<!--<tr class="warning">
-			  <th rowspan="1" id="zuoce">快捷入口</th>
-			  <td align="center"><a href="http://jwc.bupt.edu.cn/content/content.php?p=10_2_235" target="_blank"id="lianjie">空余教室查询</a></td>
-        <td align="center"><a href="http://jwc.bupt.edu.cn/list/list.php?p=9_38_1" target="_blank"id="lianjie">毕业设计</a></td>
-        <td align="center"><a href="http://jwc.bupt.edu.cn/content/content.php?p=5_68_111" target="_blank"id="lianjie">教学事务流程</a></td>
-
-        <td align="center"><a href="http://ecard.bupt.edu.cn/" target="_blank"id="lianjie">校园一卡通</a></td>
-        <td align="center"><a href="http://www.bupt.edu.cn/content/content.php?p=6_9_79" target="_blank"id="lianjie">办公电话</a></td>
-        <td align="center"><a href="http://cslab.bupt.edu.cn/innovation/" target="_blank"id="lianjie">创新实践平台</a></td>
-        <td align="center"><a href="http://www.bupt.edu.cn/content/content.php?p=6_10_80" target="_blank"id="lianjie">校历</a></td>
-        <td align="center"><a href="http://buptclass.com/" target="_blank" id="lianjie1">自习室查询</a></td>
-  		</tr>
-
-
-			<tr class="active">
-			  <th rowspan="1" id="zuoce">论坛相关</th>
-			  <td align="center"><a href="https://bbs.byr.cn/#!default" target="_blank" id="lianjie">北邮人论坛</a></td>
-        <td align="center"><a href="http://bbs.cloud.icybee.cn" target="_blank" id="lianjie1">游客版论坛</a></td>
-        <td align="center"><a href="http://search.icybee.cn/" target="_blank" id="lianjie">检索用户的回复</a></td>
-        <td align="center"><a href="http://search.lovezxp.com/" target="_blank" id="lianjie">检索用户的发帖</a></td>
-               <td align="center"><a href="http://bbss.zhengzi.me/" target="_blank"id="lianjie">查看每日十大</a></td>
-        <td align="center"><a href="http://android.myapp.com/myapp/detail.htm?apkName=cn.byr.bbs.app" target="_blank"id="lianjie">应用下载(安卓)</a></td>
-
-        <td align="center"><a href="http://weibo.com/byrbbs" target="_blank"id="lianjie">论坛官方微博</a></td>
-        <td align="center"><a href="https://bbs.byr.cn/#!article/Talking/5852307" target="_blank"id="lianjie">玩转论坛指南</a></td>
-
-			</tr>-->
-<div class="row">
+	
+<!--<div class="row">
   <div class="col-xs-6 col-md-8">
     <a href="https://v.qq.com/x/page/v037207acnl.html"  target="_blank" class="thumbnail">
-      <!--<img src="images/122.jpg" alt="meiti.wiki 新媒体导航">-->
       	<img src="http://yun.zhangxingqiu.cn/images/122.jpg" alt="平凡之路短片">
 
     </a>
   </div>
 
+
   <div class="col-xs-6 col-md-4">
     <a href="https://zhuanlan.zhihu.com/p/25579524" target="_blank" class="thumbnail">
       <img src="http://yun.zhangxingqiu.cn/images/123.jpg" alt="专访龙轩导航站长">
     </a>
-</div>
+</div>-->
 
 
 </div>
