--- a/index.html
+++ b/index.html
@@ -135,13 +135,14 @@ width: 100%;
     </div>
   </div>
 
-  <div class="input-group input-group-lg">
- 	   <!--<span class="input-group-addon">Ciicle</span>-->
+  <!--<div class="input-group input-group-lg">
+ 	   <!--<span class="input-group-addon">Ciicle</span>- ->
     <form action="http://www.baidu.com/s" method="get" target="_blank">
-       <input type="text" class="form-control" name="search" id="search" placeholder="输入关键词，再点击下方相应按钮，即可检索。 " baiduSug="2"  value=" " >
+       <!--<input type="text" class="form-control" name="search" id="search" placeholder="输入关键词，再点击下方相应按钮，即可检索。 " baiduSug="2"  value=" " >- ->
+ </div>-->
 
- </div>
-
+    <form action="http://www.baidu.com/s" method="get" target="_blank">
+      <input type="text" class="form-control" name="search" id="search" placeholder="输入关键词，再点击下方相应按钮，即可检索！ " baiduSug="2"  value="" >
 
     <P><center>
     <input type="submit" value="谷歌" id="google" button type="button" class="btn btn-primary"/>
