update side title to Ciocle

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
 
 
-  <title>Ciicle</title>
+  <title>Ciocle</title>
 
 <link rel="shortcut icon" href="./favicon.ico">
 
-<meta name="Keywords" content="Capt,导航,Ciicle,"/>
-<meta name="Description" content="个人常用的导航页，随时随地 Ciicle。一个框，全能搜！如打开缓慢，请访问简洁版 http://so.byr.wiki/"/>
+<meta name="Keywords" content="Capt,导航,Ciocle,"/>
+<meta name="Description" content="个人常用的导航页，随时随地 Ciocle。一个框，全能搜！如打开缓慢，请访问简洁版 http://so.byr.wiki/"/>
 
 
 <!--
@@ -82,7 +82,7 @@ width: 100%;
 
    <!-- <a href="http://byr.wiki" id="zb" style="font-size: 19px;">北邮人导航</a>- ->
    <!-- <a class="LOGO1" href="http://byr.wiki"><img id="zb" src="http://yun.zhangxingqiu.cn/images/logo7.png"  alt="北邮人导航"></a> - ->
-    <a href="https://auspbro.github.io/maneuver/" target="_blank" class="zb"  >Ciicle</a>
+    <a href="https://auspbro.github.io/maneuver/" target="_blank" class="zb"  >Ciocle</a>
 
     <a href="http://byr.wiki/liuyan.html" target="_blank" class="yb "  >...</a>
     <!--<a href="http://byr123.irockbunny.com/" target="_blank" class="yb">新版导航</a>- ->
@@ -136,7 +136,7 @@ width: 100%;
   </div>
 <br>
   <!--<div class="input-group input-group-lg">
- 	   <!--<span class="input-group-addon">Ciicle</span>- ->
+ 	   <!--<span class="input-group-addon">Ciocle</span>- ->
     <form action="http://www.baidu.com/s" method="get" target="_blank">
        <!--<input type="text" class="form-control" name="search" id="search" placeholder="输入关键词，再点击下方相应按钮，即可检索。 " baiduSug="2"  value=" " >- ->
  </div>-->
