fix logo can not center horizontally

--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@
 <div class="container">
   <div class="row LOGO">
     <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-xs-6 col-xs-offset-3">
-    
-      <a href="./index.html"><img id="LOGO" src="images/zen.png" width="30" height="30"  alt="Responsive image"></a>
-
+      <P><center>
+      <a href="./index.html"><img id="LOGO" src="images/zen.png" width="35" height="35"  alt="Responsive image"></a>
+    </center></P>
     </div>
   </div>
 </div>
 
-  <p></p>
+<br>
 
   <!--<div class="input-group input-group-lg">
  	   <!--<span class="input-group-addon">Ciocle</span>- ->
@@ -118,7 +118,7 @@
       <input type="text" class="form-control" name="search" id="search" placeholder="输入关键词，再点击下方相应按钮，即可检索！ " value="" baiduSug="2">
     </center></P>
     </div>
-<br>
+
 
     <P><center>
     <!--<input type="submit" value="谷歌镜像" id="google1" button type="button" class="btn btn-primary"/>-->
