--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 <div>
   <P><center>
     <form action="http://www.baidu.com/s" method="get" target="_blank">
-      <input type="text" class="form-control" name="search" id="search" placeholder="输入关键词，再点击下方相应按钮，即可检索！ " value="" baiduSug="2">
+      <input type="text" class="form-control" name="search" id="search" placeholder="输入关键词点击下方按钮即可检索！ " value="" baiduSug="2">
     </center></P>
     </div>
 
