fix last two search don't work

--- a/index.html
+++ b/index.html
@@ -267,11 +267,11 @@
       //sInfor.type="question";
     }
     //hao123 音乐
-     sgequ.onclick=function(){
-      sAddress.action="http://music.hao123.com/search?";
-      sInfor.name="key";
-      sInfor.type="1";
-    }
+//     sgequ.onclick=function(){
+//      sAddress.action="http://music.hao123.com/search?";
+//      sInfor.name="key";
+//      sInfor.type="1";
+//    }
 
 
      //改用网易云音乐检索 移动端检索出现异常
@@ -307,22 +307,15 @@
 
 
 //去转盘
-  $('#wangpan').click(function() {
-      var query = $('#search').val();
-      if ( query ) {
-        window.open("http://www.quzhuanpan.com/source/search.action?q=" + query + "&currentPage=1", "_blank");
-        return false;
+//  $('#wangpan').click(function() {
+//      var query = $('#search').val();
+//      if ( query ) {
+//        window.open("http://www.quzhuanpan.com/source/search.action?q=" + query + "&currentPage=1", "_blank");
+//        return false;
+//
+//     	};
+//    });
 
-     	};
-    });
-
-   
-    //胖次网，网盘资源检索
-    //swangpan.onclick=function(){
-      //sAddress.action="http://www.panc.cc/s";
-      //sInfor.type="author";
-      //sInfor.name="q";
-    //}
 
   </script>
 
