comment placeholder temporary

--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
     <P>
       <center>
         <form action="http://www.baidu.com/s" method="get" target="_blank">
-          <input type="text" class="form-control" name="search" id="search" placeholder="输入关键词点击下方按钮即可检索！ " value="" baiduSug="2">
+          <!-- <input type="text" class="form-control" name="search" id="search" placeholder="输入关键词点击下方按钮即可检索！ " value="" baiduSug="2"> -->
+          <input type="text" class="form-control" name="search" id="search"  value="" baiduSug="2">
       </center>
     </P>
   </div>
