--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="shortcut icon" href="./favicon.ico">
 
   <meta name="Keywords" content="Capt,auspbro,导航,Ciocle," />
-  <meta name="Description" content="方便自己，随时随地 Ciocle。一个框，高效检索！" />
+  <meta name="Description" content="方便自己，方便他人。随时随地 Ciocle。一个框，高效检索！" />
 
 
   <!--
@@ -23,7 +23,7 @@
 <link href="http://yun.zhangxingqiu.cn/css/bootstrap.min.css" rel="stylesheet" />
 <link rel="stylesheet" href="http://yun.zhangxingqiu.cn/css/frontstyle.css">
 <script src="http://yun.zhangxingqiu.cn/assets/js/jquery-3.1.0.min.js"></script>
-<script src="http://yun.zhangxingqiu.cn/assets/js/jquery-migrate-3.0.0.min.js"></script>
+<script src="http://yun.zhangxingqiu.cn/assets/js/jquery-migrate-3.0.0.min.js"></script>··
 
 -->
 
