--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
   <title>Ciocle</title>
-
+ <!-- branch test -->
   <link rel="shortcut icon" href="./favicon.ico">
 
   <meta name="Keywords" content="Capt,auspbro,导航,Ciocle," />
@@ -132,7 +132,7 @@
       <input type="submit" value="豆瓣" id="douban" button type="button" class="btn btn-primary" />
       <input type="submit" value="影视" id="movie" button type="button" class="btn btn-primary" />
       <input type="submit" value="网盘" id="panci" button type="button" class="btn btn-primary" />
-      <input type="submit" value="源码" id="github" button type="button" class="btn btn-primary" />
+      <input type="submit" value="GitHub" id="github" button type="button" class="btn btn-primary" />
       <!--<input type="submit" value="京东" id="jd" button type="button" class="btn btn-primary" />-->
       <!--<input type="submit" value="音乐" id="gequ" button type="button" class="btn btn-primary"/>-->
       <!--<input type="submit" value="地图" id="ditu" button type="button" class="btn btn-primary"/>-->
